# market_research_agent

./: Dockerfile  Dockerfile.test  LICENSE  LLD.md  LLD.md.temp  README.md  TESTING.md  config.yaml  config.yml  docker-compose.yml  market_features.db  pyproject.toml  requirements.txt  test.db
market_research_agent/: __init__.py  base.py  cli.py  config.py  features.py  scheduler.py  scoring.py  store.py
market_research_agent/api/: __init__.py  endpoints.py
market_research_agent/features/: __init__.py  technical.py
market_research_agent/providers/: __init__.py  yahoo.py
scripts/: cleanup-db.sh  init-timescaledb.sh
tests/: test_api.py  test_cli.py  test_features.py  test_integration.py  test_providers.py  test_scheduler.py  test_scoring.py  test_store.py
